--- a/p3d.html
+++ b/p3d.html
@@ -1,78 +1,152 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="UTF-8">
-		<link rel="shortcut icon" href="img/ymico.ico"/>
-		<script type="text/javascript" src="p3d&p5d js/p3d&p5d.js" ></script>
+		<link rel="shortcut icon" href="img/ymico.ico" />
+		<script type="text/javascript" src="p3d&p5d js/p3d&p5d.js"></script>
+		<script type="text/javascript" src="p3d&p5d js/jquery-3.4.0.js"></script>
+		<script type="text/javascript" src="p3d&p5d js/music.js"></script>
 		<link rel="stylesheet" href="p3d&p5d css/p3d.css" />
 		<title>音觅-p3d</title>
 	</head>
+
 	<body>
-					<!--LOGO部分开始-->
-	
-	<div id="bgd">
-		<div id="head">
-		<div class="left">
-			<img src="img/yinmi.jpg"/>
+		<!--LOGO部分开始-->
+
+		<div id="bgd">
+			<div id="head">
+				<div class="left">
+					<a href="index.html"><img src="img/yinmi.jpg" /></a>
+				</div>
+				<div class="right">
+					<div class="user">
+						<input type="text" id="ssk" class="color" value="搜索..." style="height: 25px;border-radius:6px;border: none;padding-left: 5px;" onfocus="ssChange_0()" onblur="ssChange_1()" />
+						<a class="father" href="index.html">&nbsp;&nbsp;登录▼
+						</a>
+					</div>
+				</div>
+			</div>
 		</div>
-		<div class="right">
-			<div class="user">
-				<input type="text" class="color" value="搜索..." style="height: 25px;border-radius:6px;border: none;padding-left: 5px;"/>
-			        <span class="father" onmouseover="change('user_log','block')" onmouseout="change('user_log','none')">&nbsp;&nbsp;登陆▼
-			        	<div id="user_log">
-			        		<img src="img/timg (1).jpg"/>
-			        		<input type="text" size="10" class="name"/>
-			        		<input class="pass" size="10" type="text"/>
-			        		<input type="button" value="登陆"class="left_1" />
-			        		<input type="button" class="right_2" value="注册"/>
-			        	</div>
-			        </span>
-			</div>		
-		</div>
-	</div>
-	</div>
-	
-	<!--LOGO部分结束-->
+		<!--LOGO部分结束-->
 		<!--导航部分开始-->
 		<div id="nav">
 			<ul class="nav_1">
-				<li><a href="#">每日推荐</a></li>
-				<li><a href="#">发现音乐</a></li>
-				<li><a href="#">精选歌单</a></li>
-				<li><a href="#">榜单</a></li>
-				<li><a href="#">热门专辑</a></li>
-				<li><a href="#">歌手</a></li>
+				<li>
+					<a href="#">首页</a>
+				</li>
+				<li>
+					<a href="#">每日推荐</a>
+				</li>
+				<li>
+					<a href="#">歌曲排行</a>
+				</li>
+				<li>
+					<a href="#">小众精选</a>
+				</li>
+				<li>
+					<a href="#">歌手</a>
+				</li>
+				<li>
+					<a href="#">关于我们</a>
+				</li>
 			</ul>
 		</div>
-        <!--导航部分结束-->
-                <!--banner部分开始-->
-        <div id="banner"> 
-        	
-        	<!--专辑介绍-->
-        	<div id="banner_1">
-        		<img src="img/p3d/专辑封面.jpg" alt="p5d专辑图片" class="p5d图片"/>
-        		<div id="jiesao">
-        			<h1 class="字体">
+		<!--导航部分结束-->
+		<!--banner部分开始-->
+		<div id="banner">
+
+			<!--专辑介绍-->
+			<div id="banner_1">
+				<img src="img/p3d/专辑封面.jpg" alt="p5d专辑图片" class="p5d图片" />
+				<div id="jiesao">
+					<h1 class="字体">
         				P3D 女神异闻录3 月夜之舞
         			</h1>
-        			<p>
-        				<span>专辑介绍：</span><br/>
-						PlayStation®4専用ペルソナダンシング オールスター・トリプルパック限定版特典『P3D』＆『P5D』フルサウンドトラック（４枚組・全60曲以上）
+					<p>
+						<span>专辑介绍：</span><br/> PlayStation®4専用ペルソナダンシング オールスター・トリプルパック限定版特典『P3D』＆『P5D』フルサウンドトラック（４枚組・全60曲以上）
 						<br/>这里是其中的『P3D』(女神异闻录3:月夜热舞 原声带)
-						<br/>了解『P5D』请点击<a href="p5d.html">『P5D』</a>。
-        			</p><br/>
-        			<p>
-        				<span>歌手</span>：目黒将司,Lotus Juice,川村ゆみ,Lyn等
-        			</p><br/>
-        			<p>
-        				<span>发行时间</span>：2018-05-24
-        			</p><br/>
-        			<p>
-        				<span>发行公司</span>： ATLUS
-        			</p>		
-        		</div>     
-        		 <!--top部分开始-->
-        <a href="#TOP" id="top"><img src="img/p3d/TOP.png"/></a>
-        <!--top部分结束-->
+						<br/>了解『P5D』请点击
+						<a href="p5d.html">『P5D』</a>。
+					</p><br/>
+					<p>
+						<span>歌手</span>：目黒将司,Lotus Juice,川村ゆみ,Lyn等
+					</p><br/>
+					<p>
+						<span>发行时间</span>：2018-05-24
+					</p><br/>
+					<p>
+						<span>发行公司</span>： ATLUS
+					</p>
+				</div>
+				<!--包含的歌曲列表开始-->
+				<div id="music">
+					<h2 class="music">包含的歌曲列表</h2>
+					<dl>
+						<dt><img src="img/p3d/歌名/1.png" alt="" /></dt>
+						<dd>『女神异闻录3』的自由活动时间BGM之一，<br/>这里收录的是『p3d』专辑中的变调版。</dd>
+					</dl>
+					<dl>
+						<dt><img src="img/p3d/歌名/2.png" alt="" /></dt>
+						<dd class="dd">『女神异闻录3』的片头曲<br/>由川村ゆみ和Lotus Juice演唱。</dd>
+					</dl>
+					<dl>
+						<dt><img src="img/p3d/歌名/3.png" alt="" /></dt>
+						<dd>『女神异闻录3』中哈姆子的战斗主题曲<br/>。这里收录的是『p3d』专辑中的变调版。</dd>
+					</dl>
+					<dl>
+						<dt><img src="img/p3d/歌名/4.png" alt="" /></dt>
+						<dd>曲子最初是在persona2017超级live里作<br/>为压轴出场，是天鹅绒房间的BGM变调版。</dd>
+					</dl>
+					<dl>
+						<dt><img src="img/p3d/歌名/5.png" alt="" /></dt>
+						<dd>『女神异闻录3』哈姆子的个人曲。</dd>
+					</dl>
+					<dl>
+						<dt><img src="img/p3d/歌名/6.png" alt="" /></dt>
+						<dd>『女神异闻录3』的片头曲<br/>由川村ゆみ和Lotus Juice演唱不同的变调版。</dd>
+					</dl>
+					<dl>
+						<dt><img src="img/p3d/歌名/7.png" alt="" /></dt>
+						<dd class="dd">是女神异闻录演唱的歌曲，<br/>收录于专辑《女神异闻录3 轮回转生》。</dd>
+					</dl>
+					<dl>
+						<dt><img src="img/p3d/歌名/8.png" alt="" /></dt>
+						<dd>『女神异闻录3』中游戏中一般战斗BGM。<br/>这里收录的是『p3d』专辑中的变调版。</dd>
+					</dl>
+					<dl>
+						<dt><img src="img/p3d/歌名/9.png" alt="" /></dt>
+						<dd>『女神异闻录3』中游戏中一般战斗BGM。<br/>在『p3d』中制作了完整长度版本。</dd>
+					</dl>
+					<dl>
+						<dt><img src="img/p3d/歌名/10.png" alt="" /></dt>
+						<dd>是目黒将司演唱的一首歌曲，收录于专辑<br/>《ペルソナ コンピレーションCD-BOX》中。</dd>
+					</dl>
+					<dl>
+						<dt><img src="img/p3d/歌名/11.png" alt="" /></dt>
+						<dd>『女神异闻录3』的结尾曲，<br/>后收录于『p3d』专辑中。</dd>
+					</dl>
+					<dl>
+						<dt><img src="img/p3d/歌名/12.png" alt="" /></dt>
+						<dd>『PQ2』的哈姆子commu的BGM。<br/>收录于『p3d』专辑中。</dd>
+					</dl>
+					<dl>
+						<dt><img src="img/p3d/歌名/13.png" alt="" /></dt>
+						<dd>『女神异闻录3』的自由活动时间BGM之一，<br/>这里收录的是『p3d』专辑中的变调版。</dd>
+					</dl>
+				</div>
+				<!--包含的歌曲列表结束-->
+
+				<!--歌曲播放部分开始-->
+				<div id="music_stay">
+					<img src="img/ym.png" alt="" class="music_img" />
+					<p id="wz">管理当前播放歌曲</p>
+				</div>
+				<div id="music_xinxi"></div>
+				<!--歌曲播放部分结束-->
+				<!--top部分开始-->
+				<a href="#TOP" id="top"><img src="img/p3d/TOP.png" /></a>
+				<!--top部分结束-->
 	</body>
+
 </html>
